fix: Word-break in Children List endgültig erledigt. Firefox, IE 11 und Edge teilen die Wörter nach Silben. Chrome schneidet das Wort ab, aber nur dann, wenn es zu lange für eine Zeile ist. Ansonsten wird das ganze Wort in neue Zeile verschoben.

--- a/src/QUI/Controls/ChildrenList.1er.css
+++ b/src/QUI/Controls/ChildrenList.1er.css
@@ -95,10 +95,14 @@
 
 /* hyphenate / word break */
 .qui-control-childrenlist-1er-entry-content header {
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+    -ms-word-break: normal;
     word-break: normal;
-    -webkit-word-break: break-word; /* Non standard for webkit */
-    -webkit-hyphens: auto;
+    word-break: break-word;
+    -ms-hyphens: auto;
     -moz-hyphens: auto;
+    -webkit-hyphens: auto;
     hyphens: auto;
 }
 
