--- a/src/QUI/Controls/ChildrenList.2er.css
+++ b/src/QUI/Controls/ChildrenList.2er.css
@@ -91,10 +91,14 @@
 
 /* hyphenate / word break */
 .qui-control-childrenlist-2er-entry-content header {
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+    -ms-word-break: normal;
     word-break: normal;
-    -webkit-word-break: break-word; /* Non standard for webkit */
-    -webkit-hyphens: auto;
+    word-break: break-word;
+    -ms-hyphens: auto;
     -moz-hyphens: auto;
+    -webkit-hyphens: auto;
     hyphens: auto;
 }
 
