--- a/src/QUI/Controls/ChildrenList.SimpleArticleList.css
+++ b/src/QUI/Controls/ChildrenList.SimpleArticleList.css
@@ -67,9 +67,13 @@ a.qui-control-childrenlist-simpleArticleList-link {
 
 /* hyphenate / word break */
 .qui-control-childrenlist-simpleArticleList header {
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+    -ms-word-break: normal;
     word-break: normal;
-    -webkit-word-break: break-word; /* Non standard for webkit */
-    -webkit-hyphens: auto;
+    word-break: break-word;
+    -ms-hyphens: auto;
     -moz-hyphens: auto;
+    -webkit-hyphens: auto;
     hyphens: auto;
 }
